PropertyGrid: Added new attribute called ItemsSourceAttribute which allows you to use an attribute to specify a custom items source for a ComboBox editor.  To use simply create a custom class the implements the IItemsSource interface:
    public class ColorSource : IItemsSource
    {
        public IList<object> GetValues()
        {
            return new List<object>() { Colors.Blue, Colors.Gray, Colors.Green };
        }
    }

Then decorate your property with the ItemsSource attirbute and specify the Type of source to use:

        private Color _color = Colors.Green;
        [ItemsSource(typeof(ColorSource))]
        public Color Color
        {
            get { return _color; }
            set { _color = value; }
        }

When the PropertyGrid loads, the editor for the Color property will be a ComboBox with an ItemsSource of ColorSource.GetValues().

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -237,6 +237,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="BusyIndicator\Implementation\VisualStates.BusyIndicator.cs" />
+    <Compile Include="PropertyGrid\Implementation\Attributes\IItemsSource.cs" />
+    <Compile Include="PropertyGrid\Implementation\Attributes\ItemsSourceAttribute.cs" />
     <Compile Include="PropertyGrid\Implementation\Commands\PropertyGridCommands.cs" />
     <Compile Include="PropertyGrid\Implementation\Converters\ValueSourceToImagePathConverter.cs" />
     <Compile Include="PropertyGrid\Implementation\Converters\ValueSourceToToolTipConverter.cs" />
@@ -256,6 +258,7 @@
     <Compile Include="PropertyGrid\Implementation\Editors\DoubleUpDownEditor.cs" />
     <Compile Include="PropertyGrid\Implementation\Editors\EnumComboBoxEditor.cs" />
     <Compile Include="PropertyGrid\Implementation\Editors\FontComboBoxEditor.cs" />
+    <Compile Include="PropertyGrid\Implementation\Editors\ItemsSourceEditor.cs" />
     <Compile Include="PropertyGrid\Implementation\Editors\TimeSpanEditor.cs" />
     <Compile Include="PropertyGrid\Implementation\IEditorDefinition.cs" />
     <Compile Include="PropertyGrid\Implementation\Editors\IntegerUpDownEditor.cs" />
