PropertyGrid: Implemented support for complex properties.  You can now drill down into a hierarchy of an object's properties.  I an not sure if I will create my own attribute or use the following syntax.
        [TypeConverter(typeof(ExpandableObjectConverter))]
        public Person Admin
        {
            get { return _admin; }
            set { _admin = value; }
        }

For now it works with the above syntax.

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -271,6 +271,7 @@
     <Compile Include="PropertyGrid\Implementation\PropertyItemCollection.cs" />
     <Compile Include="PropertyGrid\Implementation\PropertyItem.cs" />
     <Compile Include="PropertyGrid\Implementation\Commands\PropertyItemCommands.cs" />
+    <Compile Include="PropertyGrid\Implementation\PropertyGridUtilities.cs" />
     <Compile Include="RichTextBoxFormatBar\IRichTextBoxFormatBar.cs" />
     <Compile Include="RichTextBoxFormatBar\RichTextBoxFormatBar.xaml.cs">
       <DependentUpon>RichTextBoxFormatBar.xaml</DependentUpon>
