PropertyGrid: fixed alignment of grid splitter for expanded properties

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -267,6 +267,7 @@
     <Compile Include="PropertyGrid\Implementation\Editors\TextBlockEditor.cs" />
     <Compile Include="PropertyGrid\Implementation\Editors\TextBoxEditor.cs" />
     <Compile Include="PropertyGrid\Implementation\Editors\TypeEditor.cs" />
+    <Compile Include="Core\Converters\ExpandableObjectMarginConverter.cs" />
     <Compile Include="PropertyGrid\Implementation\PropertyGrid.cs" />
     <Compile Include="PropertyGrid\Implementation\PropertyItemCollection.cs" />
     <Compile Include="PropertyGrid\Implementation\PropertyItem.cs" />
