PropertyGrid: added new property called AutoGenerateProperties.  When true it will autogenerate all properties for an object.  Wehn set to false if till not generate any properties, but instead you supply the property to show be defining PropertyDefinitions.  here is an example:
        <extToolkit:PropertyGrid AutoGenerateProperties="False">
            <extToolkit:PropertyGrid.PropertyDefinitions>
                <extToolkit:PropertyDefinition Name="FirstName" />
                <extToolkit:PropertyDefinition Name="Age" />
            </extToolkit:PropertyGrid.PropertyDefinitions>
        </extToolkit:PropertyGrid>

This will only show the FirstName and Age properties of the bound object.

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -268,6 +268,8 @@
     <Compile Include="PropertyGrid\Implementation\Editors\TextBoxEditor.cs" />
     <Compile Include="PropertyGrid\Implementation\Editors\TypeEditor.cs" />
     <Compile Include="Core\Converters\ExpandableObjectMarginConverter.cs" />
+    <Compile Include="PropertyGrid\Implementation\PropertyDefinition.cs" />
+    <Compile Include="PropertyGrid\Implementation\PropertyDefinitionCollection.cs" />
     <Compile Include="PropertyGrid\Implementation\PropertyGrid.cs" />
     <Compile Include="PropertyGrid\Implementation\PropertyItemCollection.cs" />
     <Compile Include="PropertyGrid\Implementation\PropertyItem.cs" />
