PropertyGrid: no longer support the ExpandableObjectConverter syntax for defining a complex property.  I have added a new attribute called ExpandableObjectAttribute.
The syntax is as follows: 

public class Person
    {
        [Description("First Name")]
        public string FirstName { get; set; }
        [Description("Last Name")]
        public string LastName { get; set; }

        [ExpandableObject]
        public Person Spouse { get; set; }
    }

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -237,6 +237,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="BusyIndicator\Implementation\VisualStates.BusyIndicator.cs" />
+    <Compile Include="PropertyGrid\Implementation\Attributes\ExpandableObjectAttribute.cs" />
     <Compile Include="PropertyGrid\Implementation\Attributes\IItemsSource.cs" />
     <Compile Include="PropertyGrid\Implementation\Attributes\ItemsSourceAttribute.cs" />
     <Compile Include="PropertyGrid\Implementation\Commands\PropertyGridCommands.cs" />
