Moved PropertyGrid changes into .NET 3.5 solution

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -267,7 +267,7 @@
     <Compile Include="PropertyGrid\Implementation\Editors\TextBlockEditor.cs" />
     <Compile Include="PropertyGrid\Implementation\Editors\TextBoxEditor.cs" />
     <Compile Include="PropertyGrid\Implementation\Editors\TypeEditor.cs" />
-    <Compile Include="Core\Converters\ExpandableObjectMarginConverter.cs" />
+    <Compile Include="PropertyGrid\Implementation\Converters\ExpandableObjectMarginConverter.cs" />
     <Compile Include="PropertyGrid\Implementation\PropertyDefinition.cs" />
     <Compile Include="PropertyGrid\Implementation\PropertyDefinitionCollection.cs" />
     <Compile Include="PropertyGrid\Implementation\PropertyGrid.cs" />
