TokenizedTextBox: got the basics working.  No autocomplete yet, but the value is looked up from the ItemsSource.  This control can be used with or without an itemsrouce backing values.  If no ItemsSource is define, the Text property will be a list of semi-colon separated values.  If backed by an ItemsSource the Text property will be a semi-colon separated list of values based on the ValueMemberPath property:
        <extToolkit:TokenizedTextBox x:Name="_textBox"
                                     DisplayMemberPath="FullName" //value to display
                                     SearchMemberPath="FirstName" //value to search for when typing
                                     ValueMemberPath="Id" //value to store in text property />

            //code behind
            _textBox.Text = "1;2;"; //list of object ids
            _textBox.ItemsSource = new List<Email>() //use as lookup values
            {
                new Email() { Id = 1, FirstName = "John", LastName = "Doe", EmailAddress = "john@test.com" },
                new Email() { Id = 2, FirstName = "Jane", LastName = "Doe", EmailAddress = "jane@test.com" },
            };

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -295,6 +295,7 @@
     <Compile Include="TimePicker\Implementation\TimeFormat.cs" />
     <Compile Include="TimePicker\Implementation\TimeItem.cs" />
     <Compile Include="TimePicker\Implementation\TimePicker.cs" />
+    <Compile Include="TokenizedTextBox\Implementation\Token.cs" />
     <Compile Include="TokenizedTextBox\Implementation\TokenItem.cs" />
     <Compile Include="TokenizedTextBox\Implementation\TokenizedTextBox.cs" />
     <Compile Include="TokenizedTextBox\Implementation\TokenizedTextBoxCommands.cs" />
