PropertyGrid: implemented PropertyOrderAttribute.  You can now apply the PropertyOrder attirbute to a property to control the order in which the properties are sorted.  The attribute is only honored while in the Categorized view and ignored when sorted alphabetically

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -274,6 +274,7 @@
     <Compile Include="PropertyGrid\Implementation\Attributes\ExpandableObjectAttribute.cs" />
     <Compile Include="PropertyGrid\Implementation\Attributes\IItemsSource.cs" />
     <Compile Include="PropertyGrid\Implementation\Attributes\ItemsSourceAttribute.cs" />
+    <Compile Include="PropertyGrid\Implementation\Attributes\PropertyOrderAttribute.cs" />
     <Compile Include="PropertyGrid\Implementation\Commands\PropertyGridCommands.cs" />
     <Compile Include="PropertyGrid\Implementation\Converters\ValueSourceToImagePathConverter.cs" />
     <Compile Include="PropertyGrid\Implementation\Converters\ValueSourceToToolTipConverter.cs" />
