--- a/ExtendedWPFToolkitSolution_35/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
+++ b/ExtendedWPFToolkitSolution_35/Src/WPFToolkit.Extended/WPFToolkit.Extended.csproj
@@ -541,6 +541,15 @@
     <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\SplitButton\Implementation\SplitButton.cs">
       <Link>SplitButton\Implementation\SplitButton.cs</Link>
     </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\TimelinePanel\Implementation\DateElement.cs">
+      <Link>TimelinePanel\Implementation\DateElement.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\TimelinePanel\Implementation\OverlapBehavior.cs">
+      <Link>TimelinePanel\Implementation\OverlapBehavior.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\TimelinePanel\Implementation\TimelinePanel.cs">
+      <Link>TimelinePanel\Implementation\TimelinePanel.cs</Link>
+    </Compile>
     <Compile Include="..\..\..\ExtendedWPFToolkitSolution\Src\WPFToolkit.Extended\TimePicker\Implementation\TimeFormat.cs">
       <Link>TimePicker\Implementation\TimeFormat.cs</Link>
     </Compile>
